force-app/main/default/objects/Proposal__c/fields/Synopsis__c.field-meta.xml
<CustomField>
    <fullName>Synopsis__c</fullName>
    <label>Synopsis</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>