force-app/main/default/objects/Proposal__c/recordTypes/AO_Proposal.recordType-meta.xml
<RecordType>
    <fullName>AO_Proposal</fullName>
    <active>true</active>
    <description>Architecture Offering Proposal</description>
    <label>AO Proposal</label>
</RecordType>